# picam

./: .env  .gitignore  README.md  SETUP.md  how to connect.md  how to set up.md  install_picam.sh  modèle.py  picam.code-workspace  requirements.txt  setup.sh  template.py
apps/: detection_smartphone.py
computer/matlab/scripts/: countArea.m  countBoxes2.m  countRotatedRectangles.m  createMaskedImage.m  identifySquareObjects.m  matlab.mat  rectangleCounterSpecificImage.m  removeNonSquareObjects.m  testIdentifySquareObjects.m  testQRCodeReader.m
computer/src/: aruco.json  aruco_tags.json  camera_calibration2.npz  detect_aruco.py  estimate_mobile_tags_world_pos_with_corners.py  match.py  test_aruco_detection_flow.py  vision.py
computer/tools/: calibrate_camera.py  camera_calibration.npz  camera_calibration.txt  connect_to_pi.py  qr_readability_checker.py  qr_readability_checker_2.py  test_undistort_image.py  undistort_image.py
docs/: 2026-eurobot-rules.md  architecture.pptx  aruco-detection-pipeline.md  code-documentation.md  doc.md  general-eurobot-rules.md  hard.md  how-to-build-aruco-test.md  how-to-build.md  how-to-calibrate-the camera.md  how-to-connect.md  how-to-edit-wifi.md  how-to-run.md  how-to-set-up.md  how-to-test-the-camera.md  matlab image processing.docx  note.md  projet.md  requirements-for-supervison.md  requirements.md  terrain de test.docx
lab/: 1 detect aruco tags - every detection combinaisons.py  10 localization with function 2.py  10 localization with function.py  10_localization_with_function_2.py  2 detect aruco tags - combinaisons benchmark.py  3 detect aruco tags - one combinaison.py  5 detect aruco tags - one combinaison folder - time tracing.py  6 detect aruco tags - one combinaison folder - time tracing - mask.py  9 localization benchmark.py  aruco_initial_positions.py  doc.md  localisation 3D.py  solvepnp.py
lab/poc/socket/: client.py
logs/: detection.log.2026-02-03  main.log.2026-02-03
matlab/scripts/: QRcode.m
matlab/tools/: filenameToCSV.py  qr_readability_checker_3.py
raspberry/: .env
raspberry/config/: camera_calibration.npz  env_loader.py
raspberry/setup/: setup.sh  setup_env.sh  setup_wifi.sh
raspberry/src/: __init__.py  aruco.py  aruco_detection_function.py  camera.py  camera_calibration.npz  camera_functions.py  detect_aruco.py  detect_aruco2.py  logging.conf  main.py  my_math.py  take_picture.py  take_picture_2.py  task_aruco_detection.py  task_communication.py  task_stream.py  task_web_ui.py  undistort_image.py
raspberry/src/camera/: __init__.py  camera.py  camera_factory.py  fake_camera.py
raspberry/src/camera_lib/: camera_lib.py
raspberry/src/templates/: index.html
raspberry/src/web-ui/: index.html  script.js
raspberry/tools/: __init__.py  calibrate_camera.py  capture.py  capture.sh  capture_for_calibration.py  check_camera.sh  check_memory.sh  check_wifi.sh  clear_memory.sh  config.ini  organize_photos_by_date.py  run.sh  stream.py  update_repo.sh
raspberry/vision_python/: .env
raspberry/vision_python/config/: __init__.py  camera_calibration_2000x2000.npz  (+4 more)
rod_c/: CMakeLists.txt  README.md  archi.md  build.sh  rod_communication.c  rod_detection.c  run.sh
rod_c/docs/: cmake-build-system.md  how to build.md  how-to-run.md
rod_c/rod_camera/: CMakeLists.txt  README_EMULATED_CAMERA.md  emulated_camera.c  emulated_camera.h  libcamera_wrapper.cpp  libcamera_wrapper.h
rod_c/rod_config/: CMakeLists.txt  rod_config.c  rod_config.h
rod_c/rod_cv/: CMakeLists.txt  opencv_wrapper.cpp  opencv_wrapper.h  rod_cv.c  rod_cv.h
rod_c/rod_socket/: CMakeLists.txt  rod_socket.c  rod_socket.h
rod_c/rod_visualization/: CMakeLists.txt  rod_visualization.c  rod_visualization.h
rod_c/systemd/: QUICKSTART.md  README.md  fix_working_directory.sh  how-to-see-logs.md  install.sh  rod-communication.service  rod-detection.service  rod.target  uninstall.sh
rod_c/tests/: CMakeLists.txt  test_emulated_camera.c  test_rod_cv.c
rod_python/apps/: README.md  calibration_fisheye.py  detection_fishey.py
rod_python/docs/: how-to-run.md
rod_python/lab/: 10 localization with function.py  11 detect aruco tags.py  4 detect aruco tags - one combinaison folder.py  6 detect aruco tags - one combinaison folder - time tracing - mask.py  7 detect aruco tags - localization.py  8 detect aruco tags - localization avec dis.py  aruco_initial_positions.py  find_mask.py  localisation 3D.py  solvepnp.py
rod_python/setup/: setup_venv.sh
setup/: set_static_ip.sh  setup.sh  setup_venv.sh  setup_wifi.sh  wifi_config.json
src/camera_check/: camera_check.sh
src/capture/: capture.py  capture.sh
src/capture_images/: capture.sh  capture_images.py  capture_images.sh  simple_capture.sh  start_picam.sh
src/match_viewer/: quick_test_camera.py  stream.py  stream2.py
src/strat/: test_DRMKMS_preview.py  test_NULL_preview.py  test_Qt_preview.py  test_qtgl_preview.py
src/test_camera/: quick_camera_test.sh
tests/: test_detection.py  test_detection_and_annotation.py  test_detection_and_localisation.py  test_detection_and_location.py  test_straightening.py  test_unround.py
tools/: calibrate_camera.py  capture.py  capture_for_calibration.py  stream.py
vision_c/: CMakeLists.txt  build.sh
vision_c/apps/: CMakeLists.txt  detect_aruco.c  test_aruco_detection_pipeline.c
vision_c/include/: libcamera_wrapper.h  opencv_wrapper.h
vision_c/src/: grayscale_converter.cpp  main.c
vision_c/src/test_wrapper/: compilation.sh  grayscale_converter.c
vision_c/src/wrappers/: libcamera_wrapper.cpp  opencv_wrapper.cpp
vision_c/tests/: CMakeLists.txt  test_libcamera.cpp  test_libcamera_wrapper.c  test_opencv.cpp  test_opencv_wrapper.c
vision_python/: __init__.py  requirements.txt
vision_python/config/: config.py  logging.conf
vision_python/src/: main.py
vision_python/tests/: benchmark.py  example_usage_aruco_detection_pipeline.py  magic_param_finder.py  test_benchmark_2pass.py  test_camera.py  test_detection.py  test_enhanced_detection.py  test_img_preprocessing_and_detection.py  test_processing_pipeline.py  test_straightening.py  test_unround.py
(+54 files in other folders)
